Fix alignment for currency in withdrawal flow
Without this, the currency was overflowing on the right.
This way, it’s right-aligned inside the padding.

--- a/packages/web-client/app/components/card-pay/transaction-amount/index.css
+++ b/packages/web-client/app/components/card-pay/transaction-amount/index.css
@@ -42,7 +42,6 @@
 
 .transaction-amount__currency-text {
   position: absolute;
-  max-width: var(--input-currency-text-width);
   height: var(--tx-amount-input-height);
   display: flex;
   align-items: center;
